[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Sprites/Multiplayer/State/funk_kard.png" type="Texture" id=1]
[ext_resource path="res://Scripts/States/Multiplayer/Other/multi_card.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Multiplayer/loading.png" type="Texture" id=3]
[ext_resource path="res://Assets/Characters/bf/icon-bf.png" type="Texture" id=4]
[ext_resource path="res://Assets/Other/Font/phantommuff-full.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 22
use_filter = true
font_data = ExtResource( 5 )

[node name="Card" type="Node2D"]
script = ExtResource( 2 )

[node name="CardSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="IconSprite" type="Sprite" parent="."]
position = Vector2( 209, 113 )
rotation = -0.169297
texture = ExtResource( 4 )
hframes = 2

[node name="LoadingSprite" type="Sprite" parent="IconSprite"]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="NameText" type="Label" parent="."]
margin_left = -249.0
margin_top = -86.0
margin_right = -45.0
margin_bottom = -16.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -3
custom_fonts/font = SubResource( 1 )
text = "Codist"

[node name="InfoText" type="RichTextLabel" parent="."]
margin_left = -243.0
margin_top = -7.0
margin_right = 105.0
margin_bottom = 165.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_constants/line_separation = -3
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "Win Ratio: 20%
Favorite Song: MILF
A
B
C
D
"
text = "Win Ratio: 20%
Favorite Song: MILF
A
B
C
D
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
